[package]
name = "kovi-plugin-aiqa"
version = "0.1.1"
edition = "2021"

[dependencies]
headless_chrome = "1.0.15"
kovi = ">=0.11"
pulldown-cmark = "0.12.2"
thiserror = "2"
parking_lot = "0.12"
async-openai = "0.26.0"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
kovi-plugin-expand-lagrange = "0.7"
kovi-plugin-expand-napcat = "0.4"
